--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@
 body {
   background: var(--secondcolor);
 }
+
+.btn {
+  border: none;
+  background-color: var(--primarycolor);
+  color: white;
+  padding: 10px;
+}
